--- a/SDK4/conf/deploy.properties
+++ b/SDK4/conf/deploy.properties
@@ -10,7 +10,6 @@
 PROJECT_NAME=example
 NAMESPACE_PREFIX=gme://caCORE.caCORE/3.2/
 
-
 ################################################################################## 
 #  MODEL PROPERTIES
 #
@@ -25,6 +24,7 @@ DATA_MODEL=Logical View.Data Model
 INCLUDE_PACKAGE=domain
 EXCLUDE_PACKAGE=sametableleaflevel
 EXCLUDE_NAME=
+
 ##################################################################################
 #  DATABASE CONNECTION PROPERTIES
 # 
@@ -64,3 +64,28 @@ WEBSERVICE_NAME=exampleService
 #  User can choose to specify any absolute path for the cache files
 ##################################################################################
 CACHE_PATH=java.io.tmpdir
+
+
+##################################################################################
+#  CODE GENERATION OPTIONS
+#  Following properties are used to enable or disable code generation step. These
+#  properties accept values of either 'true' or 'false'. Setting the value to
+#  false disables a component and setting value to true enables the component
+#
+#  VALIDATE_LOGICAL_MODEL if enabled checks for the validity of the object model
+#  VALIDATE_MODEL_MAPPING if enabled checks for the validity of the object to 
+#                         database mapping 
+#  GENERATE_HIBERNATE_MAPPING if enabled generates Hibernate related artifacts
+#  GENERATE_BEANS if enabled generates Java beans from the object model
+#  GENERATE_CASTOR_MAPPING if enabled generates castor mapping files for the 
+#                          object model
+#  GENERATE_XSD if enabled generates the XSD
+#  GENERATE_WSDD if enabled generates the web services deployment file
+##################################################################################
+VALIDATE_LOGICAL_MODEL=true
+VALIDATE_MODEL_MAPPING=true
+GENERATE_HIBERNATE_MAPPING=true
+GENERATE_BEANS=true
+GENERATE_CASTOR_MAPPING=true
+GENERATE_XSD=true
+GENERATE_WSDD=true
