Added server type option
SVN-Revision: 884

--- a/SDK4/conf/deploy.properties
+++ b/SDK4/conf/deploy.properties
@@ -38,7 +38,7 @@ EXCLUDE_NAME=
 #  CACHE_PATH is being used by the EHCache to store its cache files on disk
 ##################################################################################
 USE_JNDI_BASED_CONNECTION=no
-DB_JNDI_URL=
+DB_JNDI_URL=SDK
 
 DB_DRIVER=oracle.jdbc.driver.OracleDriver
 DB_CONNECTION_URL=jdbc:oracle:thin:@cbiodb30.nci.nih.gov:1521:CBTEST
@@ -89,3 +89,11 @@ GENERATE_BEANS=true
 GENERATE_CASTOR_MAPPING=true
 GENERATE_XSD=true
 GENERATE_WSDD=true
+
+##################################################################################
+#  APPLICATION SERVER PROPERTIES
+#
+#  SERVER_TYPE if set to jboss will exclude log4j.jar from the war file 
+#              any other value will include the log4j.jar in the war file
+##################################################################################
+SERVER_TYPE=other
