Removed unwanted packages from the Test model and fixed the transformer utils to accept NO exclude packages
SVN-Revision: 892

--- a/SDK4/conf/deploy.properties
+++ b/SDK4/conf/deploy.properties
@@ -22,7 +22,7 @@ MODEL_FILE_TYPE=EA
 LOGICAL_MODEL=Logical View.Logical Model
 DATA_MODEL=Logical View.Data Model
 INCLUDE_PACKAGE=domain
-EXCLUDE_PACKAGE=sametableleaflevel
+EXCLUDE_PACKAGE=
 EXCLUDE_NAME=
 
 ##################################################################################
