SDK 4.0 System Integration changes, Part 2
SVN-Revision: 897

--- a/SDK4/conf/system/package/remote-client/build.xml
+++ b/SDK4/conf/system/package/remote-client/build.xml
@@ -79,6 +79,16 @@
 	</target>
 	
 	<!--***********************************************************************
+	*** Runs the Web Service Test 
+	*********************************************************************** -->
+	<target name="runWS" depends="compile" description="Runs the test">
+		<SDKecho message="${ant.project.name}: Running the Web Service test"/>
+		<java classname="WSTestClient" fork="true">
+			<classpath refid="runtime" />
+		</java>
+	</target>
+	
+	<!--***********************************************************************
 	*** Dumps the properties of the build script
 	*********************************************************************** -->
 	<target name="show-properties" description="Dumps a list of all properties currently set">
