--- a/SDK4/conf/system/web/WEB-INF/web.xml
+++ b/SDK4/conf/system/web/WEB-INF/web.xml
@@ -49,6 +49,12 @@ taglib>
 		<load-on-startup>1</load-on-startup>
 	</servlet>	
 
+	<servlet>
+		<servlet-name>AdminServlet</servlet-name>
+		<servlet-class>org.apache.axis.transport.http.AdminServlet</servlet-class>
+		<load-on-startup>5</load-on-startup>
+	</servlet>
+
     <servlet>
         <servlet-name>AxisServlet</servlet-name>
         <servlet-class>org.apache.axis.transport.http.AxisServlet</servlet-class> 
@@ -74,6 +80,22 @@ taglib>
         <servlet-name>AxisServlet</servlet-name>
         <url-pattern>/ws/AxisServlet</url-pattern>
     </servlet-mapping>
+
+	<servlet-mapping>
+		<servlet-name>AxisServlet</servlet-name>
+		<url-pattern>/servlet/AxisServlet</url-pattern>
+		</servlet-mapping>
+	<servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>AdminServlet</servlet-name>
+        <url-pattern>/services/AdminService</url-pattern>
+    </servlet-mapping>
+
+	<servlet-name>AxisServlet</servlet-name>
+		<url-pattern>/services/*</url-pattern>
+	</servlet-mapping>
+		
     
     <servlet-mapping>
         <servlet-name>AxisServlet</servlet-name>
@@ -89,6 +111,11 @@ taglib>
     	<servlet-name>GetHTML</servlet-name>
       	<url-pattern>/GetHTML</url-pattern>
     </servlet-mapping>
+
+	<mime-mapping>
+		<extension>wsdl</extension>
+		<mime-type>text/xml</mime-type>
+	</mime-mapping>
 
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
