--- a/SDK4/system/build.xml
+++ b/SDK4/system/build.xml
@@ -112,9 +112,9 @@
 			<manifest>
 				<attribute name="Generated-By" value="caCORE SDK Code Generator"/>
 			</manifest>
-			<include name="gov/nih/nci/system/ws/**/*"/>
+			<include name="gov/nih/nci/system/webservice/**/*"/>
 			<fileset dir="${src.dir}">
-				<include name="gov/nih/nci/system/ws/**/*"/>
+				<include name="gov/nih/nci/system/webservice/**/*"/>
 			</fileset>
 		</jar>
 	</target>
