SDK 4.0 System Integration changes, Part 2
SVN-Revision: 905

--- a/SDK4/build.properties
+++ b/SDK4/build.properties
@@ -5,6 +5,7 @@ output.dir=output
 output.project.dir=${output.dir}/${PROJECT_NAME}
 output.src.dir=${output.project.dir}/src
 output.conf.dir=${output.project.dir}/conf
+output.build.jar.dir=${output.project.dir}/build/jar
 
 conf.dir=conf
 codegen.config.dir=${conf.dir}/codegen
@@ -14,7 +15,7 @@ system.config.client.local.dir=${system.config.dir}/package/local-client
 system.config.client.remote.dir=${system.config.dir}/package/remote-client
 system.config.client.webapp.dir=${system.config.dir}/package/webapp
 
-output.conf.dir=${output.project.dir}/conf
+output.conf.webservice.dir=${output.conf.dir}/webservice
 output.codegen.config.dir=${output.project.dir}/${codegen.config.dir}
 codegen.config.file=CodegenConfig.xml
 
@@ -34,6 +35,8 @@ package.system.dir=${package.dir}/webapp
 
 bean.file=${PROJECT_NAME}-beans.jar
 orm.file=${PROJECT_NAME}-orm.jar
+
+url.project.axisservice=http://${WEB_SERVER_HOST_NAME}:${WEB_SERVER_PORT}/${PROJECT_NAME}/ws/AxisServlet
 
 xml.comment.start=<!--
 xml.comment.end=-->
