SDK 4.0 System Integration changes, Part 2
SVN-Revision: 907

--- a/SDK4/conf/deploy.properties
+++ b/SDK4/conf/deploy.properties
@@ -50,11 +50,16 @@ DB_DIALECT=org.hibernate.dialect.OracleDialect
 ##################################################################################
 #  WEB SERVICE PROPERTIES
 #
-#  Value of the WEBSERVICE_NAME property will be used to create:
-#		1)deploy.wssd
-#		2)
+#  Value of the WEBSERVICE_NAME property will be used to:
+#		1) create deploy.wssd
+#
+#  Value of the WEB_SERVER_HOST_NAME/WEB_SERVER_PORT/WEBSERVICE_NAME property will be used to:
+#		* create the Web Service deploy/un-deploy URL
+#
 ##################################################################################
 WEBSERVICE_NAME=exampleService
+WEB_SERVER_HOST_NAME=localhost
+WEB_SERVER_PORT=8080
 
 ##################################################################################
 #  ADVANCED PROPERTIES
