--- a/SDK4/conf/system/web/WEB-INF/web.xml
+++ b/SDK4/conf/system/web/WEB-INF/web.xml
@@ -4,11 +4,11 @@
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
-			/WEB-INF/applicationContext-acegi-security.xml
+			<!--  /WEB-INF/applicationContext-acegi-security.xml-->
 			/WEB-INF/classes/application-config.xml
 		</param-value>
 	</context-param>
-	
+	<!-- 
     <filter>
         <filter-name>Acegi Filter Chain Proxy</filter-name>
         <filter-class>org.acegisecurity.util.FilterToBeanProxy</filter-class>
@@ -17,7 +17,7 @@
             <param-value>org.acegisecurity.util.FilterChainProxy</param-value>
         </init-param>
     </filter>
-
+	 -->
 	<filter> 
 		<filter-name>struts2</filter-name> 
 		<filter-class>org.apache.struts2.dispatcher.FilterDispatcher</filter-class>
@@ -27,11 +27,12 @@
         </init-param>
 	</filter> 
 
+	<!-- 
     <filter-mapping>
       <filter-name>Acegi Filter Chain Proxy</filter-name>
       <url-pattern>/*</url-pattern>
     </filter-mapping>	
-
+	 -->
 	<filter-mapping> 
 		<filter-name>struts2</filter-name> 
 		<url-pattern>/*</url-pattern> 
@@ -72,7 +73,7 @@ taglib>
 	<servlet>
 		<servlet-name>AdminServlet</servlet-name>
 		<servlet-class>org.apache.axis.transport.http.AdminServlet</servlet-class>
-		<load-on-startup>5</load-on-startup>
+		<load-on-startup>1</load-on-startup>
 	</servlet>
 
     <servlet>
@@ -104,15 +105,15 @@ taglib>
     <servlet-mapping>
         <servlet-name>AxisServlet</servlet-name>
 		<url-pattern>/servlet/AxisServlet</url-pattern>
-		</servlet-mapping>
-	<servlet-mapping>
+	</servlet-mapping>
 
     <servlet-mapping>
         <servlet-name>AdminServlet</servlet-name>
         <url-pattern>/services/AdminService</url-pattern>
     </servlet-mapping>
 
-	<servlet-name>AxisServlet</servlet-name>
+    <servlet-mapping>
+		<servlet-name>AxisServlet</servlet-name>
 		<url-pattern>/services/*</url-pattern>
 	</servlet-mapping>
 		
