Changed the web services properties
SVN-Revision: 924

--- a/SDK4/conf/deploy.properties
+++ b/SDK4/conf/deploy.properties
@@ -57,9 +57,7 @@ DB_DIALECT=org.hibernate.dialect.OracleDialect
 #		* create the Web Service deploy/un-deploy URL
 #
 ##################################################################################
-WEBSERVICE_NAME=exampleService
-WEB_SERVER_HOST_NAME=localhost
-WEB_SERVER_PORT=8080
+WEBSERVICE_NAME=${PROJECT_NAME}Service
 
 ##################################################################################
 #  ADVANCED PROPERTIES
@@ -102,3 +100,4 @@ GENERATE_WSDD=true
 #              any other value will include the log4j.jar in the war file
 ##################################################################################
 SERVER_TYPE=other
+SERVER_URL=http://localhost:8080/${PROJECT_NAME}
