--- a/SDK4/conf/system/package/ws-client/build.xml
+++ b/SDK4/conf/system/package/ws-client/build.xml
@@ -3,9 +3,12 @@
 
 	<description>Build script for WS Client</description>
 
+	<property file="build.properties"  />
+
 	<property name="lib.dir" value="lib"/>
 	<property name="build.dir" value="build"/>
 	<property name="src.dir" value="src"/>
+	<property name="conf.dir" value="conf"/>
 	
 	<!--***********************************************************************
 	*** CLASSPATH AND UNIX-STYLE BASEDIR PROPERTIES
@@ -14,6 +17,7 @@
 		<fileset dir="${lib.dir}">
 			<include name="**/*.jar"/>
 		</fileset>
+		<pathelement path="${conf.dir}"/>
 		<pathelement path="${build.dir}"/>
 	</path>
 	
@@ -73,6 +77,31 @@
 		<SDKecho message="${ant.project.name}: Running the test"/>
 		<java classname="TestClient" fork="true">
 			<classpath refid="runtime" />
+		</java>
+	</target>
+	
+	<!--***********************************************************************
+	*** Deploys the web service to the server
+	*********************************************************************** -->
+	<target name="deploy" description="Deploys the webservice">
+		<SDKecho message="Deploying web services to ${SERVER_URL}/services/${WEBSERVICE_NAME}"/>
+		<echo message="Deploying to ${url.project.axisservice}"/>
+		<java classname="org.apache.axis.client.AdminClient" fork="true">
+			<classpath refid="runtime"/>
+			<arg value="-l${SERVER_URL}/services/AxisServlet"/>
+			<arg value="${conf.dir}\deploy.wsdd"/>
+		</java>
+	</target>	
+	
+	<!--***********************************************************************
+	*** Undeploying the web service from the server
+	*********************************************************************** -->
+	<target name="undeploy"  description="Undeploys the webservice">
+		<SDKecho message="Undeploying web services from ${SERVER_URL}/services/${WEBSERVICE_NAME}"/>
+		<java classname="org.apache.axis.client.AdminClient" fork="true">
+			<classpath refid="classpath"/>
+			<arg value="-l${SERVER_URL}/services/AxisServlet"/>
+			<arg value="${conf.dir}/undeploy.wsdd"/>
 		</java>
 	</target>
 	
