Changes for the web services
SVN-Revision: 927

--- a/SDK4/build.properties
+++ b/SDK4/build.properties
@@ -5,17 +5,17 @@ output.dir=output
 output.project.dir=${output.dir}/${PROJECT_NAME}
 output.src.dir=${output.project.dir}/src
 output.conf.dir=${output.project.dir}/conf
-output.build.jar.dir=${output.project.dir}/build/jar
 
 conf.dir=conf
 codegen.config.dir=${conf.dir}/codegen
 
-system.config.dir=${conf.dir}/system
+system.config.dir=${output.conf.dir}/system
 system.config.client.local.dir=${system.config.dir}/package/local-client
 system.config.client.remote.dir=${system.config.dir}/package/remote-client
 system.config.client.webapp.dir=${system.config.dir}/package/webapp
+system.config.client.ws.dir=${system.config.dir}/package/ws-client
 
-output.conf.webservice.dir=${output.conf.dir}/webservice
+output.conf.dir=${output.project.dir}/conf
 output.codegen.config.dir=${output.project.dir}/${codegen.config.dir}
 codegen.config.file=CodegenConfig.xml
 
@@ -31,12 +31,13 @@ package.client.remote.dir=${package.dir}/remote-client
 package.client.remote.lib.dir=${package.client.remote.dir}/lib
 package.client.local.dir=${package.dir}/local-client
 package.client.local.lib.dir=${package.client.local.dir}/lib
+package.client.ws.dir=${package.dir}/ws-client
+package.client.ws.lib.dir=${package.client.ws.dir}/lib
+package.client.ws.conf.dir=${package.client.ws.dir}/conf
 package.system.dir=${package.dir}/webapp
 
 bean.file=${PROJECT_NAME}-beans.jar
 orm.file=${PROJECT_NAME}-orm.jar
-
-url.project.axisservice=http://${WEB_SERVER_HOST_NAME}:${WEB_SERVER_PORT}/${PROJECT_NAME}/ws/AxisServlet
 
 xml.comment.start=<!--
 xml.comment.end=-->
