Removed caBIO keyword
SVN-Revision: 929

--- a/SDK4/system/src/gov/nih/nci/system/web/struts/action/package.properties
+++ b/SDK4/system/src/gov/nih/nci/system/web/struts/action/package.properties
@@ -12,4 +12,4 @@ home.login = LOGIN
 home.loginID = LOGIN ID
 home.password = PASSWORD
 
-showdynamictree.root.title = caBIO Domain Packages
+showdynamictree.root.title = Domain Packages
