Added XSD and XML Mapping files to the remote-client/conf
SVN-Revision: 931

--- a/SDK4/build.properties
+++ b/SDK4/build.properties
@@ -29,6 +29,7 @@ build.doc.dir=${build.dir}/docs
 package.dir=${output.project.dir}/package
 package.client.remote.dir=${package.dir}/remote-client
 package.client.remote.lib.dir=${package.client.remote.dir}/lib
+package.client.remote.conf.dir=${package.client.remote.dir}/conf
 package.client.local.dir=${package.dir}/local-client
 package.client.local.lib.dir=${package.client.local.dir}/lib
 package.client.ws.dir=${package.dir}/ws-client
