--- a/SDK4/conf/deploy.properties
+++ b/SDK4/conf/deploy.properties
@@ -22,7 +22,7 @@ MODEL_FILE_TYPE=EA
 LOGICAL_MODEL=Logical View.Logical Model
 DATA_MODEL=Logical View.Data Model
 INCLUDE_PACKAGE=domain
-EXCLUDE_PACKAGE=
+EXCLUDE_PACKAGE=sametable,other
 EXCLUDE_NAME=
 
 ##################################################################################
