--- a/SDK4/.classpath
+++ b/SDK4/.classpath
@@ -28,5 +28,23 @@
 	<classpathentry kind="lib" path="codegen/core/lib/mmbase.jar"/>
 	<classpathentry kind="lib" path="system/lib/acegi-security-1.0.3.jar"/>
 	<classpathentry kind="lib" path="system/lib/commons-codec-1.3.jar"/>
+	<classpathentry kind="lib" path="system/lib/axis.jar"/>
+	<classpathentry kind="lib" path="system/lib/csmapi.jar"/>
+	<classpathentry kind="lib" path="system/lib/freemarker-2.3.4.jar"/>
+	<classpathentry kind="lib" path="system/lib/jdom.jar"/>
+	<classpathentry kind="lib" path="system/lib/ognl-2.6.7.jar"/>
+	<classpathentry kind="lib" path="system/lib/servlet.jar"/>
+	<classpathentry kind="lib" path="system/lib/struts2-api-2.0.1.jar"/>
+	<classpathentry kind="lib" path="system/lib/struts2-core-2.0.1.jar"/>
+	<classpathentry kind="lib" path="system/lib/xwork-2.0-beta-1.jar"/>
+	<classpathentry kind="lib" path="junit/lib/junit-3.8.1.jar"/>
+	<classpathentry kind="lib" path="system/lib/commons-discovery-0.2.jar"/>
+	<classpathentry kind="lib" path="system/lib/jaxrpc.jar"/>
+	<classpathentry kind="lib" path="system/lib/saaj.jar"/>
+	<classpathentry kind="lib" path="system/lib/wsdl4j-1.5.1.jar"/>
+	<classpathentry kind="lib" path="system/lib/castor-1.0.2.jar"/>
+	<classpathentry kind="lib" path="system/lib/mysql-connector-java-3.1.13-bin.jar"/>
+	<classpathentry kind="lib" path="system/lib/oro-2.0.8.jar"/>
+	<classpathentry kind="lib" path="system/lib/xercesImpl.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
