init target now replaces just the conf folder and not the entire output directory
SVN-Revision: 954

--- a/SDK4/build.xml
+++ b/SDK4/build.xml
@@ -86,7 +86,7 @@
 				<include name="**/*.*" />
 			</fileset>
 		</copy>
-		<replace dir="${output.dir}">
+		<replace dir="${output.conf.dir}">
 			<replacefilter token="@OUTPUTDIR@" value="${output.src.dir}" />
 			<replacefilter token="@MODEL_FILE@" value="${MODEL_FILE}" />
 			<replacefilter token="@MODEL_FILE_TYPE@" value="${MODEL_FILE_TYPE}" />
