Added security configuration files
SVN-Revision: 968

--- a/SDK4/build.properties
+++ b/SDK4/build.properties
@@ -14,6 +14,7 @@ system.config.client.local.dir=${system.config.dir}/package/local-client
 system.config.client.remote.dir=${system.config.dir}/package/remote-client
 system.config.client.webapp.dir=${system.config.dir}/package/webapp
 system.config.client.ws.dir=${system.config.dir}/package/ws-client
+system.config.security.dir=${system.config.dir}/security
 
 output.conf.dir=${output.project.dir}/conf
 output.codegen.config.dir=${output.project.dir}/${codegen.config.dir}
@@ -39,6 +40,9 @@ package.system.dir=${package.dir}/webapp
 
 bean.file=${PROJECT_NAME}-beans.jar
 orm.file=${PROJECT_NAME}-orm.jar
+
+security.config.original.file=csm.new.hibernate.cfg.xml
+security.config.file=${CSM_PROJECT_NAME}.${security.config.original.file}
 
 xml.comment.start=<!--
 xml.comment.end=-->
